# libdng

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  adobe_dng_sdk.sh  meson.build
doc/: makedng.1.scd
docs/: api.rst  conf.py  index.rst  overview.rst
include/: libdng.h
man/: makedng.1.scd
src/: dcp.c  dng.h  libdng.c  mode.c  mode.h  repack.c  repack.h
tests/: CMakeLists.txt  check_dcp.c  check_dng.c  check_mode.c  check_repack.c  greatest.h  meson.build  test.sh  test_dng_validate.sh
tests/fixture/: meson.build  pinephone.dcp
util/: dngmerge.c  dumpdng.c  makedng.c
